--- a/index.html
+++ b/index.html
@@ -50,18 +50,20 @@
 
         <section class="results">
 
-            <div class="amount">
-                <p>
-                    Tip Amount <br> <span>/ person</span>
-                </p>
-                <strong>$0.00</strong>
-            </div>
-
-            <div class="total">
-                <p>
-                    Total <br> <span>/ person</span>
-                </p>
-                <strong>$0.00</strong>
+            <div>
+                <div class="amount">
+                    <p>
+                        Tip Amount <br> <span>/ person</span>
+                    </p>
+                    <strong>$0.00</strong>
+                </div>
+    
+                <div class="total">
+                    <p>
+                        Total <br> <span>/ person</span>
+                    </p>
+                    <strong>$0.00</strong>
+                </div>
             </div>
         
             <button>Reset</button>
