--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </div>
             </div>
         
-            <button>Reset</button>
+            <button onclick="reset()">Reset</button>
             
         </section>
 
